--- a/github-page/src/projects.json
+++ b/github-page/src/projects.json
@@ -3,7 +3,7 @@
         "id": 0,
         "title": "Java",
         "imageUrl": "/resources/images/java.png",
-        "readMeUrl": ""
+        "readMeUrl": "https://github.com/ravikmrsingh8/coding-practice/tree/main/java"
     },
     {
         "id": 1,
@@ -15,7 +15,7 @@
         "id": 2,
         "title": "Leetcode",
         "imageUrl": "/resources/images/leetcode.png",
-        "readMeUrl": ""
+        "readMeUrl": "https://github.com/ravikmrsingh8/coding-practice/tree/main/leetcode"
     },
     {
         "id": 3,
